--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sort-by": "^1.2.0",
     "tss-react": "^4.4.1",
     "typescript": "^4.8.4",
